--- a/package.json
+++ b/package.json
@@ -9,15 +9,12 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server -p3001 --watch db.json"
+    "start": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
@@ -38,6 +35,8 @@
     ]
   },
   "devDependencies": {
-    "json-server": "^0.17.3"
+    "@vitejs/plugin-react": "^4.0.4",
+    "json-server": "^0.17.3",
+    "vite": "^4.4.9"
   }
 }
