--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.9",
     "@vitejs/plugin-react": "^4.0.4",
     "json-server": "^0.17.3",
     "vite": "^4.4.9"
