--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for withered-pond-9883 on 2023-09-16T11:08:02+03:00
+# fly.toml app configuration file generated for green-brook-755 on 2023-09-16T11:38:04+03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "withered-pond-9883"
+app = "green-brook-755"
 primary_region = "arn"
 
 [build]
